--- a/docs/Practica-6/styles.css
+++ b/docs/Practica-6/styles.css
@@ -19,3 +19,17 @@ body {
 .hidden {
     display: none;
 }
+
+#loader {
+    border: 16px solid #27a722; 
+    border-top: 16px solid #d81dde;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
