--- a/docs/Practica-7/styles.css
+++ b/docs/Practica-7/styles.css
@@ -4,11 +4,13 @@
   
   html {
     font-size: 100%;
+    background-color: green;
   }
   
   body {
     font-family: system-ui, sans-serif;
     padding: 1.25rem;
+    color: greenyellow;
   }
   
   form {
